// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should handle details click 1`] = `
<Snackbar
  onDismiss={[Function]}
  status="danger"
>
  <div>
    <div>
      details
    </div>
  </div>
</Snackbar>
`;

exports[`Alert should render with all props 1`] = `
<Snackbar
  onDismiss={[Function]}
  status="danger"
>
  <div>
    <div>
      message
       
      <a
        onClick={[Function]}
      >
        View Details
      </a>
    </div>
  </div>
</Snackbar>
`;
